<resources>
    <string name="app_name">Top news</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <string name="source_name">Source: </string>
    <string name="published_at">Published at </string>
    <string name="news">News</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hot_news">Hot news</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sources">Sources</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_subscribe">Subscribe manager</string>
    <string name="action_mode_selected_sources">Sources selected</string>
    <string name="toast_button_exit_message">Please press button again to exit</string>
    <string name="search_view_hint">Search</string>
    <string name="net_not_available">No internet connections found. Check your connection or try again</string>
    <string name="net_alert_message">Whoops!</string>
    <string name="net_internet_not_available_button_name">Retry</string>
    <string name="network_error">Network error.</string>
    <string name="intent_chooser">Select browser</string>
    <string name="copy_url">Copy url</string>
    <string name="visit_site">Visit site</string>
    <string name="copy_image_url">Copy image url</string>
    <string name="add_to_filter">Add to filter</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="toast_data_restored">Data restored.</string>
    <string name="undo_snackbar_button_name">UNDO</string>
    <string name="snackbar_undo_title">Restore removed item?</string>
    <string name="history_fragment_label">History</string>
    <string name="bookmark_fragment_label">Bookmark</string>
    <string name="there_were_no_any_search_queries">There were no any search queries.</string>
    <string name="ok">OK</string>
    <string name="screen_title_bookmarks">Bookmarks</string>
    <string name="screen_title_history">History</string>
    <string name="screen_title_news">News</string>
    <string name="screen_title_hot_news">Hot news</string>
    <string name="manage_subscriptions_menu_title">Manage subscriptions</string>
    <string name="menu_delay_toast_url_copied">URL copied.</string>
    <string name="menu_delay_toast_image_url_copied">URL to image copied.</string>
    <string name="menu_delay_toast_temp_toast">Article added to temp filter.</string>
    <string name="menu_delay_toast_add_to_bookmarks">Article added to bookmarks.</string>
    <string name="forward_record_button">To page</string>
    <string name="delete_record_button">Delete</string>
    <string name="empty_record_message">There is nothing to show.</string>
    <string name="empty_record_message_2">Save your articles to read them later.</string>
    <string name="clear_filter_btn">Сбросить фильтр</string>
    <string name="submit">Submit</string>
    <string name="there_is_no_available_articles">There is no available articles.</string>
    <string name="top_news">Top News</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_connections_found_check_your_connection_or_try_again">No internet connections found. Check your connection or try again</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No internet !</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipising_elit">Lorem ipsum dolor sit amet, consectetur adipising elit.</string>
    <string name="search_history">Search history</string>
    <string name="clear">Clear</string>
</resources>
