<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hot_news_item"
            android:icon="@drawable/ic_whatshot_48px"
            android:title="@string/hot_news" />
        <item
            android:id="@+id/news_item"
            android:icon="@drawable/newspaper"
            android:title="@string/news" />
        <item
            android:id="@+id/history_item"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/bookmark_item"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks" />

    </group>
</menu>
